ENTRYSTORE-552 #resolve Adding support for CSV output on SPARQL queries